snugom/tests/ui/validate_regex_on_numeric.stderr
error: regex validator only supported for string fields
  --> tests/ui/validate_regex_on_numeric.rs:14:23
   |
14 |     #[snugom(validate(regex = "^[0-9]+$"))]
   |                       ^^^^^
